# s2n-quic

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  404.html  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  book.toml  check_stderr.txt  ci.html  client  codecov.yml  dev-guide.html  index.html  patch  pr_description.txt  print.html  run-rmc  rust-toolchain  rustc_panic.txt  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-1de4198e.js  searchindex-2d692c52.js  searchindex.js  searchindex.json  server  toc-13e9c8a4.js  toc-a7ade1fd.js  toc-aa1c12b9.js  toc-af6706ff.js  toc-db3b541b.js  toc.html  toc.js  user-guide.html
common/docdiff/: Cargo.toml
common/docdiff/src/: main.rs
common/duvet/: Cargo.toml  README.md
common/duvet/src/: annotation.rs  extract.rs  main.rs  object.rs  parser.rs  project.rs  source.rs  sourcemap.rs  target.rs
common/duvet/www/: .gitignore  Makefile
common/s2n-codec/: Cargo.toml  README.md
common/s2n-codec/src/: lib.rs  unaligned.rs  zerocopy.rs
dc/s2n-quic-dc/: Cargo.toml  FRAME_AGGREGATION.md  PARTIAL_DATAGRAM_DESIGN.md  RELIABLE_DATAGRAM_PIPELINE.md  STREAM2.md  flow_initialization.md  stream-shutdown-investigation.md  stream-stuck-design.md  udp-sender-performance-investigation.md
dc/s2n-quic-dc-benches/: Cargo.toml
dc/s2n-quic-dc-benches/benches/: bench.rs
dc/s2n-quic-dc-benches/src/: bench.rs  crypto.rs  datagram.rs  endpoint.rs  handshake.rs  lib.rs  streams.rs
dc/s2n-quic-dc-metrics/: .clippy.toml  Cargo.toml
dc/s2n-quic-dc-metrics/benches/: main.rs
dc/s2n-quic-dc-metrics/src/: appender.rs  bool_counter.rs  callback.rs  counter.rs  format.rs  lib.rs  registry.rs  rseq.rs  runtime.rs  summary.rs  task.rs  test.rs
dc/s2n-quic-dc/benches/: Cargo.toml
dc/s2n-quic-dc/docs/: credit-pool-pre-integration-plan.md  endpoint-flow-control.md  flow-queue-rewrite.md  known-issue-sim-endpoint-memory-leak.md  reader-flow-review.md
dc/s2n-quic-dc/events/: acceptor.rs  common.rs  connection.rs  endpoint.rs  map.rs
dc/s2n-quic-dc/examples/: turmoil_partition.rs  turmoil_socket_trait.rs  turmoil_udp_echo.rs
dc/s2n-quic-dc/src/: acceptor.rs  bitset.rs  busy_poll.rs  clock.rs  congestion.rs  connection_close.rs  control.rs  counter.rs  credentials.rs  credit.rs  crypto.rs  datagram.rs  either.rs  endpoint.rs  event.rs  fixed_map.rs  flow.rs  intrusive.rs  intrusive_queue.rs  lib.rs  msg.rs  packet.rs  path.rs  pipeline.rs  pool.rs  psk.rs  queue.rs  random.rs  recovery.rs  rpc.rs  runtime.rs  socket.rs  stream.rs  stream2.rs  stream3.rs  sync.rs  testing.rs  time.rs  tracing.rs  uds.rs  (+1 more)
examples/: Cargo.toml  async-client-hello-callback.html  custom-congestion-controller.html
examples/async-client-hello-callback/: Cargo.toml
examples/async_client_hello_callback/: Cargo.toml
examples/custom-congestion-controller/: Cargo.toml  README.md
examples/custom-congestion-controller/src/: lib.rs
examples/dos-mitigation/: Cargo.toml
examples/dos-mitigation/src/: lib.rs
examples/echo/: Cargo.toml
examples/event-framework/: Cargo.toml
examples/event-framework/src/: lib.rs
examples/jumbo-frame/: Cargo.toml  README.md
examples/jumbo-frame/src/: lib.rs
examples/post-quantum/: Cargo.toml  README.md
examples/post-quantum/.cargo/: config.toml
examples/quic-echo-server/: Cargo.toml
examples/quic-echo-server/src/: main.rs
examples/quic-stream-bufsize-panic-issue/: Cargo.toml
examples/resumption/: Cargo.toml  README.md
examples/rustls-mtls/: Cargo.toml  README.md
examples/rustls-mtls/certs/: ca-cert.pem  ca.pem  client-cert.pem  client-key.pem  client.pem  generate_certs.sh  server-cert.pem  server-key.pem  server.pem
examples/rustls-mtls/src/: lib.rs
examples/rustls-provider/: Cargo.toml
examples/s2n-mtls/: Cargo.toml  rust-toolchain
examples/s2n-mtls/certs/: ca-cert.pem  server-key.pem
examples/tls-offloading/: Cargo.toml  README.md
examples/turmoil-provider/: Cargo.toml  rust-toolchain
examples/turmoil-provider/src/: lib.rs
examples/unreliable-datagram/: Cargo.toml  README.md
examples/unreliable-datagram/.cargo/: config.toml
examples/unreliable-datagram/src/: main.rs
netbench/netbench/: Cargo.toml
netbench/netbench-cli/: Cargo.toml
netbench/netbench-cli/etc/: Dockerfile
netbench/netbench-cli/src/: main.rs  report.rs  report_tree.html  report_tree.rs  vega.json
netbench/netbench-collector/: Cargo.toml
netbench/netbench-collector/src/: bpftrace.rs  generic.rs  main.rs  netbench.bt  procinfo.rs
netbench/netbench-driver/: Cargo.toml  README.md
netbench/netbench-driver/etc/: Dockerfile  docker-compose.yml
netbench/netbench-driver/src/: alloc.rs  lib.rs
netbench/netbench-sync/: Cargo.toml  README.md
netbench/netbench-sync/src/: main.rs
netbench/netbench-test-player/: Cargo.toml  README.md
netbench/netbench-test-player/src/: endpoint.rs  main.rs  status.rs
netbench/netbench/src/: checkpoints.rs  client.rs  collector.rs  connection.rs  driver.rs  duplex.rs  helper.rs  lib.rs  multiplex.rs  operation.rs  s2n_quic.rs  scenario.rs  stats.rs  testing.rs  timer.rs  trace.rs  units.rs
quic/interop-server/: Cargo.toml
quic/interop-server/certs/: cert.pem  key.der
quic/interop-server/src/: endpoint.rs  main.rs  socket.rs
quic/s2n-quic-bench/: Cargo.toml  README.md
quic/s2n-quic-bench/benches/: bench.rs
quic/s2n-quic-bench/src/: buffer.rs  crypto.rs  frame.rs  inet.rs  lib.rs  packet.rs  packet_number_map.rs  sync.rs  varint.rs  xdp.rs
quic/s2n-quic-core/: Cargo.toml  README.md
quic/s2n-quic-core/benches/: frame.rs  packet.rs  varint.rs
quic/s2n-quic-core/certs/: cert.der  cert_pkcs1.pem  generate.sh  generate_certs.sh  key.der  key_pkcs1.pem  untrusted_cert.pem  untrusted_key.pem
quic/s2n-quic-core/events/: common.rs  connection.rs  endpoint.rs  platform.rs
quic/s2n-quic-crypto/: Cargo.toml  README.md
quic/s2n-quic-events/: Cargo.toml  README.md
quic/s2n-quic-h3/: Cargo.toml  README.md
quic/s2n-quic-integration/: Cargo.toml  README.md
quic/s2n-quic-platform/: Cargo.toml  README.md  build.rs
xtask/: Cargo.toml
(+3947 files in other folders)
