[workspace]
members = ["common/s2n-*", "quic/s2n-*", "dc/s2n-*", "tools/dc-tester", "xtask"]
default-members = ["common/s2n-*", "quic/s2n-*", "dc/s2n-*"]
resolver = "2"
# don't include any workspaces outside of the main project
exclude = ["examples", "tools/event-generator", "tools/memory-report", "tools/s2n-events", "tools/udp-attack", "tools/xdp"]

# Patch bach to include a fix for cancelled timer entries cascading in the
# wheel and exceeding the max_microsteps limit in simulation.
# https://github.com/camshaft/bach/commit/0bb8ade4f82f51fecedecf72dd707730a525a451
[patch.crates-io]
bach = { git = "https://github.com/camshaft/bach", rev = "0bb8ade4f82f51fecedecf72dd707730a525a451" }

[profile.release-debug]
inherits = "dev"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
incremental = false
# improve flamegraph information
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1
