[workspace]
members = ["common/s2n-*", "quic/s2n-*", "dc/s2n-*", "tools/dc-tester", "xtask"]
default-members = ["common/s2n-*", "quic/s2n-*", "dc/s2n-*"]
resolver = "2"
# don't include any workspaces outside of the main project
exclude = ["examples", "tools/event-generator", "tools/memory-report", "tools/s2n-events", "tools/udp-attack", "tools/xdp", "quic/s2n-quic-sim"]

# Patch bach to include:
# - A fix for cancelled timer entries cascading in the wheel and exceeding
#   the max_microsteps limit in simulation.
#   https://github.com/camshaft/bach/commit/0bb8ade4f82f51fecedecf72dd707730a525a451
# - Network monitor support for per-packet delays and duplication, enabling
#   reordering and duplicate-transmission simulation in deterministic tests.
#   https://github.com/camshaft/bach/commit/adaa41d1417035c8dc0737f0a8688ccac4768495
# - Relax Send bounds on spawn/primary ext traits for !Send futures in
#   single-threaded simulation.
#   https://github.com/camshaft/bach/commit/5a5ece139b71c226d18b2fb71af9a7f3ae4b09f2
# - Add synchronous host lookup for packet monitors via `bach::net::try_lookup`.
#   https://github.com/camshaft/bach/commit/8bddd1958ff66460ea7d0e060bf07b999262aadb
[patch.crates-io]
bach = { git = "https://github.com/camshaft/bach", rev = "8bddd1958ff66460ea7d0e060bf07b999262aadb" }
bolero = { git = "https://github.com/camshaft/bolero", rev = "71e5de0eceb043f3eda2f62ccd02d2be2b398c44" }
bolero-engine = { git = "https://github.com/camshaft/bolero", rev = "71e5de0eceb043f3eda2f62ccd02d2be2b398c44" }
bolero-generator = { git = "https://github.com/camshaft/bolero", rev = "71e5de0eceb043f3eda2f62ccd02d2be2b398c44" }
bolero-generator-derive = { git = "https://github.com/camshaft/bolero", rev = "71e5de0eceb043f3eda2f62ccd02d2be2b398c44" }

[profile.release-debug]
inherits = "dev"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true

[profile.fuzz]
inherits = "dev"
opt-level = 3
incremental = false
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3
