[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
s2n-quic-dc-metrics = { path = "../dc/s2n-quic-dc-metrics" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
termcolor = "1.3"
tokio = { version = "1", features = ["process", "io-util", "signal", "sync", "rt-multi-thread", "time", "macros"] }
toml = "0.8"
xshell = "0.2"
