[package]
name = "docdiff"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
duct = "0.13"
glob = "0.3"
insta = "1"
once_cell = "1"
rayon = "1"
scraper = "0.12"
selectors = "0.22"
structopt = "0.3"

[workspace]
members = ["."]
