[package]
name = "duvet"
version = "0.2.1"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
fnv = { version = "1", default-features = false }
glob = "0.3"
lazy_static = "1"
pathdiff = "0.2"
rayon = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
toml = "0.5"
triple_accel = "0.4"
url = "2"
v_jsonescape = "0.6"

[dev-dependencies]
insta = "1"

[workspace]
members = ["."]
