[package]
name = "s2n-quic-dc-metrics"
version = "0.75.0"
description = "Crate used to generate metrics for s2n-quic-dc"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
autobenches = false

[dependencies]
futures-util = "0.3.26"
histogram = "0.11.3"
pin-project-lite = "0.2.9"
tokio = { version = "1.25.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "time"] }
chrono = { version = "0.4.39", default-features = false, features = ["std", "now"] }
libc = "0.2.170"
crossbeam-queue = "0.3.12"
parking_lot = "0.12.4"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(tokio_unstable)']

[[bench]]
name = "bench"
path = "benches/main.rs"
harness = false

[dev-dependencies]
criterion = "0.8"
