[package]
name = "s2n-quic-dc"
version = "0.75.0"
description = "Internal crate used by s2n-quic"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = ["tokio"]
testing = [
    "dep:bach",
    "bolero-generator",
    "s2n-quic-core/testing",
    "s2n-quic-platform/testing",
    "tracing-subscriber",
]
tokio = ["tokio/io-util", "tokio/net", "tokio/rt-multi-thread", "tokio/time"]

[dependencies]
ahash = "0.8"
arrayvec = "0.7"
atomic-waker = "1"
aws-lc-rs = "1.12"
bach = { version = "0.1.0", features = [
    "net",
    "tokio-compat",
], optional = true }
bitflags = "2"
bolero-generator = { version = "0.13", default-features = false, optional = true }
bytes = "1"
cfg-if = "1.0"
crossbeam-channel = "0.5"
crossbeam-queue = { version = "0.3" }
dashmap = "6"
event-listener-strategy = "0.5"
flurry = "0.5"
libc = "0.2"
num-rational = { version = "0.4", default-features = false }
once_cell = "1"
pin-project-lite = "0.2"
rand = { version = "0.9", features = ["small_rng"] }
rand_chacha = "0.9"
s2n-codec = { version = "=0.75.0", path = "../../common/s2n-codec", default-features = false }
s2n-quic = { version = "=1.75.0", path = "../../quic/s2n-quic", features = ["unstable-provider-dc"] }
s2n-quic-core = { version = "=0.75.0", path = "../../quic/s2n-quic-core", default-features = false }
s2n-quic-platform = { version = "=0.75.0", path = "../../quic/s2n-quic-platform" }
slotmap = "1"
hashbrown = "0.16"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }
zeroize = "1"
parking_lot = "0.12"
bitvec = { version = "1.0.1", default-features = false }
nix = {version = "0.31.1", features = ["socket", "uio", "fs", "time"] }

[dev-dependencies]
bach = { version = "0.1.0", features = ["net", "tokio-compat"] }
bolero = "0.13"
bolero-generator = "0.13"
insta = "1"
s2n-codec = { path = "../../common/s2n-codec", features = ["testing"] }
s2n-quic = { path = "../../quic/s2n-quic", features = ["provider-event-tracing"] }
s2n-quic-core = { path = "../../quic/s2n-quic-core", features = ["testing"] }
s2n-quic-platform = { path = "../../quic/s2n-quic-platform", features = [
    "testing",
] }
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(future)', 'cfg(fuzzing)', 'cfg(kani)', 'cfg(todo)']
