[package]
name = "post-quantum"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
publish = false

[dependencies]
s2n-quic = { version = "1", path = "../../quic/s2n-quic" }
# enable the post-quantum feature in s2n-tls
s2n-tls = { version = "*", features = ["pq"] }
tokio = { version = "1", features = ["full"] }

[workspace]
members = ["."]
