[package]
name = "quic-echo-server"
version = "0.1.0"
authors = ["Cameron Bytheway <bytheway.cameron@gmail.com>"]
edition = "2018"

[dependencies]
bytes = { version = "1", default-features = false }
s2n-quic = { version = "0.1", path = "../../quic/s2n-quic" }
s2n-quic-core = { version = "0.1", path = "../../quic/s2n-quic-core", features = ["testing"] }
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }

[workspace]
members = ["."]
