[package]
name = "resumption"
version = "0.1.0"
edition = "2021"

[dependencies]
s2n-quic = { version = "1", path = "../../quic/s2n-quic", features = ["provider-tls-s2n"]}
s2n-tls = { version = "=0.0.36", features = ["quic"] }
bytes = { version = "1", default-features = false }
tokio = { version = "1", features = ["full"] }
