[package]
name = "rustls-mtls"
version = "0.1.0"
edition = "2021"
authors = ["Rick Richardson <rick.richardson@gmail.com>", "AWS s2n"]

[dependencies]
# Remove the `provider-tls-default` feature and add `provider-tls-rustls` in order to use the rustls backend
s2n-quic = { version = "1", path = "../../quic/s2n-quic", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
rustls-pemfile = "1"
s2n-quic-rustls = { path = "../../quic/s2n-quic-rustls" }
tokio = { version = "1", features = ["full"] }

[workspace]
members = ["."]

