[package]
name = "netbench-cli"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
handlebars = "4"
netbench = { version = "0.1", path = "../netbench" }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
