[package]
name = "netbench-collector"
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
publish = false

[dependencies]
handlebars = "4"
netbench = { version = "0.1", path = "../netbench" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
sysinfo = "0.26"
tokio =  { version = "1.27.0", features = ["io-util", "net", "time"] }
