[package]
name = "netbench-driver"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
publish = false

[dependencies]
bytes = "1"
futures = "0.3"
mimalloc = "0.1"
netbench = { version = "0.1", path = "../netbench" }
probe = "0.5"
s2n-quic = { path = "../../quic/s2n-quic", features = ["provider-tls-s2n"] }
s2n-quic-core = { path = "../../quic/s2n-quic-core", features = ["testing"] }
s2n-tls = { version = "0.1" }
s2n-tls-tokio = { version = "0.1" }
structopt = "0.3"
tokio = { version = "1", features = ["io-util", "net", "time", "rt-multi-thread"] }
tokio-native-tls = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Build the vendored version to make it easy to test in dev
#
# NOTE: The version of the `openssl-sys` crate is not the same as OpenSSL itself.
#       Versions 1.0.1 - 3.0.0 are automatically discovered.
openssl-sys = { version = "0.9", features = ["vendored"] }
