[package]
name = "netbench-sync"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "time"] }
tokio-native-tls = "0.3"
netbench = { version = "0.1", path = "../netbench" }
structopt = "0.3.26"
serde = { version = "1.0.159", features = ["std", "derive"] }
serde_json = "1.0"