[package]
name = "netbench"
version = "0.1.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["s2n-quic"]

[dependencies]
bytes = "1"
enum-primitive-derive = "0.2"
futures = "0.3"
num-traits = "0.2"
s2n-quic-core = { version = "0.1", path = "../../quic/s2n-quic-core", features = ["testing"] }
s2n-quic = { version = "0.1", path = "../../quic/s2n-quic", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "time"] }

[dev-dependencies]
insta = "1"
