[package]
name = "netbench"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2018"
license = "Apache-2.0"
publish = false

[features]
default = ["s2n-quic"]

[dependencies]
base64 = "0.13"
bytes = "1"
enum-primitive-derive = "0.2"
futures = "0.3"
humansize = "1"
humantime = "2"
num-traits = "0.2"
openssl = "0.10"
probe = "0.3"
rcgen = "0.9"
s2n-quic-core = { path = "../../quic/s2n-quic-core", features = ["testing"] }
s2n-quic = { path = "../../quic/s2n-quic", optional = true }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["net", "time"] }

[dev-dependencies]
futures-test = "0.3"
insta = "1"
tokio = { version = "1", features = ["io-util", "net", "test-util", "time"] }
