[package]
name = "interop-server"
version = "0.1.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>", "Matthias Einwag <einwag@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = []
mmsg = ["s2n-quic-platform/mmsg"]

[dependencies]
bytes = { version = "0.5", default-features = false }
futures = "0.3"
mio = "0.6"
s2n-codec = { path = "../../common/s2n-codec" }
s2n-quic-core = { path = "../s2n-quic-core" }
s2n-quic-platform = { path = "../s2n-quic-platform", features = ["mio", "std"] }
s2n-quic-transport = { path = "../s2n-quic-transport" }
s2n-quic-rustls = { path = "../s2n-quic-rustls" }
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
