[package]
name = "s2n-quic-bench"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2018"
license = "Apache-2.0"
# this only contains internal tests and should not be published
publish = false

[dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
s2n-codec = { version = "=0.1.0", path = "../../common/s2n-codec", features = ["testing"] }
s2n-quic-core = { version = "=0.1.2", path = "../s2n-quic-core", features = ["testing"] }
s2n-quic-crypto = { version = "=0.1.0", path = "../s2n-quic-crypto", features = ["testing"] }

[[bench]]
name = "bench"
harness = false
