[package]
name = "s2n-quic-bench"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"
# this only contains internal tests and should not be published
publish = false

[dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
s2n-codec = { path = "../../common/s2n-codec", features = ["testing"] }
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
s2n-quic-crypto = { path = "../s2n-quic-crypto", features = ["testing"] }

[[bench]]
name = "bench"
harness = false
