[package]
name = "s2n-quic-bench"
# this in an unpublished internal crate so the version should not be changed
version = "0.1.0"
authors = ["AWS s2n"]
edition = "2021"
license = "Apache-2.0"
# this only contains internal tests and should not be published
publish = false

[dependencies]
bytes = "1"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = { version = "0.5" }
internet-checksum = "0.2"
s2n-codec = { workspace = true, features = ["testing"] }
s2n-quic-core = { workspace = true, features = ["testing"] }

[[bench]]
name = "bench"
harness = false
