[package]
name = "s2n-quic-core"
version = "0.1.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["std"]
std = ["thiserror"]
testing = ["std", "generator", "s2n-codec/testing", "checked-counters"]
generator = ["bolero-generator"]
checked-counters = []

[dependencies]
bolero-generator = { version = "0.6", default-features = false, optional = true }
byteorder = { version = "1.1", default-features = false }
bytes = { version = "1", default-features = false }
displaydoc = { version = "0.1", default-features = false }
hex-literal = "0.3"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
s2n-codec = { version = "0.1", path = "../../common/s2n-codec", default-features = false }
subtle = { version = "2", default-features = false }
thiserror = { version = "1", optional = true }
zerocopy = "=0.3.0"

[dev-dependencies]
bolero = "0.6"
compliance = { path = "../../common/compliance/compliance" }
criterion = { version = "0.3", features = ["html_reports"] }
insta = "1.0"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
s2n-codec = { version = "0.1", path = "../../common/s2n-codec", features = ["testing"] }

[[test]]
name = "crypto"
path = "tests/crypto/fuzz_target.rs"
harness = false

[[bench]]
name = "frame"
harness = false

[[test]]
name = "frame"
path = "tests/frame/fuzz_target.rs"
harness = false

[[bench]]
name = "packet"
harness = false

[[test]]
name = "packet"
path = "tests/packet/fuzz_target.rs"
harness = false

[[test]]
name = "transport_parameters"
path = "tests/transport_parameters/fuzz_target.rs"
harness = false

[[bench]]
name = "varint"
harness = false

[[test]]
name = "varint"
path = "tests/varint/fuzz_target.rs"
harness = false

[[test]]
name = "recovery-simulation"
path = "tests/recovery/simulation.rs"
