[package]
name = "s2n-quic-core"
version = "0.16.0"
description = "Internal crate used by s2n-quic"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.57"
license = "Apache-2.0"
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = ["alloc", "std"]
alloc = ["atomic-waker", "cache-padded"]
std = ["alloc", "once_cell"]
testing = ["std", "generator", "s2n-codec/testing", "checked-counters", "insta", "futures-test"]
generator = ["bolero-generator"]
checked-counters = []
event-tracing = ["tracing"]

[dependencies]
atomic-waker = { version = "1", optional = true }
bolero-generator = { version = "0.8", default-features = false, optional = true }
byteorder = { version = "1", default-features = false }
bytes = { version = "1", default-features = false }
cache-padded = { version = "1", optional = true }
hex-literal = "0.3"
# used for event snapshot testing - needs an internal API so we require a minimum version
insta = { version = ">=1.12", features = ["json"], optional = true }
num-rational = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
s2n-codec = { version = "=0.2.0", path = "../../common/s2n-codec", default-features = false }
subtle = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }
zerocopy = "=0.6.0"
zerocopy-derive = "=0.3.0"
futures-test = { version = "0.3", optional = true } # For testing Waker interactions
once_cell = { version = "1", optional = true }

[dev-dependencies]
bolero = "0.8"
bolero-generator = { version = "0.8", default-features = false }
insta = { version = "1", features = ["json"] }
futures = "0.3"
futures-test = "0.3"
ip_network = "0.4"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
s2n-codec = { path = "../../common/s2n-codec", features = ["testing"] }

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.5", features = ["checkpoint", "futures"] }
