[package]
name = "s2n-quic-crypto"
version = "0.26.0"
description = "Internal crate used by s2n-quic"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.63"
license = "Apache-2.0"
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = []
testing = []

[dependencies]
cfg-if = "1"
lazy_static = "1"
s2n-codec = { version = "=0.6.2", path = "../../common/s2n-codec", default-features = false }
s2n-quic-core = { version = "=0.26.0", path = "../s2n-quic-core", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
aws-lc-rs = { version = "1.0.0", default-features = false, features = ["aws-lc-sys"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
ring = { version = "0.16.20", default-features = false }


[dev-dependencies]
aes = "0.8"
aes-gcm = "0.10"
bolero = "0.9"
ghash = "0.5"
hex-literal = "0.4"
insta = { version = "1", features = ["json"] }
pretty-hex = "0.3"
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
