[package]
name = "s2n-quic-crypto"
version = "0.36.0"
description = "Internal crate used by s2n-quic"
repository = "https://github.com/aws/s2n-quic"
authors = ["AWS s2n"]
edition = "2021"
rust-version = "1.71"
license = "Apache-2.0"
# Exclude corpus files when publishing to crates.io
exclude = ["corpus.tar.gz"]

[features]
default = []
aws-lc-bindgen = ["aws-lc-rs/bindgen"]
testing = []

[dependencies]
cfg-if = "1"
lazy_static = "1"
s2n-codec = { version = "=0.36.0", path = "../../common/s2n-codec", default-features = false }
s2n-quic-core = { version = "=0.36.0", path = "../s2n-quic-core", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
aws-lc-rs = { version = "1.6" }

[target.'cfg(target_os = "windows")'.dependencies]
ring = { version = "0.16", default-features = false }

[dev-dependencies]
aes = "0.8"
aes-gcm = "0.10"
bolero = "0.10"
ghash = "0.5"
hex-literal = "0.4"
insta = { version = "1", features = ["json"] }
pretty-hex = "0.4"
s2n-quic-core = { path = "../s2n-quic-core", features = ["testing"] }
